--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -1,7 +1,7 @@
 FROM openjdk:11.0
 
 ADD target/newproject-0.0.1-SNAPSHOT.jar app.jar
-
+EXPOSE 8081
 RUN sh -c 'echo spring.datasource.url=jdbc:mysql://mysql:3306/MYSCHEMA?serverTimezone=UTC&useSSL=false > application.properties'
 RUN sh -c 'echo spring.datasource.username=root    >> application.properties'
 RUN sh -c 'echo spring.datasource.password=c0nygre >> application.properties'
