--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
        context: .
        dockerfile: Dockerfile-app
      image: emps/app:1.0.0
+     ports:
+       - "8081:8081"
      links:
        - mysql:mysql
      depends_on:
