--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring:
-    resources:
-        static-locations: classpath:static/
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.html
 server.port=8081
 
